# opherast

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
crates/opherast-cli/: Cargo.toml  build.rs
crates/opherast-cli/src/: kernel.rs  lib.rs  main.rs  templates.rs
crates/opherast-cli/src/commands/: check.rs  list.rs  make_feature.rs  mod.rs
crates/opherast-core/: Cargo.toml
crates/opherast-core/src/: kernel.rs  lib.rs
crates/opherast-framework/: Cargo.toml  build.rs
crates/opherast-framework/src/: lib.rs
crates/opherast-framework/src/cli/: command.rs  mod.rs  runner.rs
crates/opherast-framework/src/cli/commands/: check.rs  list.rs  make_feature.rs  mod.rs
crates/opherast-framework/src/shared/: mod.rs  result.rs  utils.rs
src/: lib.rs  main.rs
src/cli/commands/: cac.rs  mod.rs
tests/: cli_list.rs  router.rs
